Permit disabling serial console if there is none
The serial console should be enabled by default, hence the
introduction a default value enabling if not explicitely disabled.

Verified with: HPE ProLiant MicroServer Gen10 which has neither
               an iLO-based BMC with virtual serial port, nor
               any physical serial port by default.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,6 +5,8 @@ grub_consoles:
   - tty0
   - 'ttyS0,{{ grub_serial.speed }}'
 
+grub_serial_enabled: True
+
 # grub serial command settings
 grub_serial:
   speed: 115200
